--- a/css/style.scss
+++ b/css/style.scss
@@ -511,6 +511,27 @@ text-decoration: none;
   display: none;
 }
 
+.display-toggle-subnav1{
+  display: block;
+  animation-name: fade;
+  transition: .5s;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  opacity: 1;
+      border-left: 1px solid gray;
+
+  .sub-1{
+animation: fade 1s ease;
+  }
+  .sub-2{
+animation: fade 1.5s ease;
+  }
+  .sub-3{
+animation: fade 2s ease;
+  }
+}
+
+
 .display-toggle-subnav{
   display: block;
   animation-name: fade;
@@ -573,6 +594,41 @@ animation: fade 2s ease;
 }
 
 
+
+
+#subNavMobile1{
+  margin-bottom: 35px;
+  margin-top: -35px;
+  margin-left: 25px;
+  padding-top: 10px;
+  padding-left: 0px!important;
+  transition: .25s;
+
+  ul{
+    list-style: none;
+    margin-left: 0;
+
+  }
+
+  li{
+    float: left;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 0px;
+    padding-right: 0;
+    text-align: center!important;
+    margin: 0;
+    color: gray!important;
+    font-size: 14px;
+    img{
+      width: 20px;
+      height: auto;
+    }
+  }
+}
+
+
+
 #nav{
   li:hover{
     #subnav{
@@ -586,9 +642,13 @@ animation: fade 2s ease;
   }
 }
 
+
+#subNav1{
+  display: none;
+}
 #nav{
   li:hover{
-    #subnav1{
+    #subNav1{
       display: block;
       li{
         a{
@@ -1735,7 +1795,7 @@ box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, .2);
 
 
 
-  #subnav1{
+  #subNav1{
     display: none;
     list-style: none;
     margin: 0;
@@ -1797,15 +1857,17 @@ box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, .2);
 
 
   #nav{
-
+.nav-item-1{
+}
     .nav-item-1:hover{
       a{
       font-weight: normal;
     }
+
     }
 
     li:hover{
-      #subnav1{
+      #subNav1{
         display: block;
         li:hover{
 
