--- a/css/style.scss
+++ b/css/style.scss
@@ -615,7 +615,7 @@ animation: fade 2s ease;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 0px;
-    padding-right: 0;
+    padding-right: 100%;
     text-align: center!important;
     margin: 0;
     color: gray!important;
