--- a/css/style.scss
+++ b/css/style.scss
@@ -401,7 +401,8 @@ text-decoration: none;
   list-style: none;
   margin-top: 5vh;
   padding-top: 10vh;
-  padding-left: 0;
+  padding-left: 5vw;
+  padding-right: 5vw;
   float: left;
 
   li{
@@ -1552,15 +1553,19 @@ p{
 
 /* BEGINS HEADER 768 */
 header{
+height: 60px;
+    .logo-container{
+      max-width: 40px;
+    }
 
 h5{
-  font-size: 30px;
-  padding-top: 5px;
+  font-size: 25px;
+  padding-top: 0px;
   padding-bottom: 5px;
 }
 
 .dropdown-menu-custom{
-  padding-top: 5px;
+  padding-top: 0px;
   max-width: 35px;
   height: auto;
 }
@@ -1961,8 +1966,6 @@ header{
       padding-left: 35px;
   .logo-container{
     max-width: 150px;
-
-
   }
   h5{
     font-size: 18px;
