--- a/css/style.css
+++ b/css/style.css
@@ -1063,6 +1063,84 @@ footer {
     padding: 50px; }
 
 /* ----------------------------------------------------------------- */
+/* BEGINS TEAM */
+#leadership {
+  padding-top: 20vh;
+  overflow: scroll !important; }
+  #leadership h4 {
+    font-size: 16px !important;
+    transition: .5s ease;
+    position: absolute;
+    bottom: 40px;
+    z-index: 10;
+    margin-left: 15px; }
+  #leadership h5 {
+    font-size: 14px;
+    transition: .5s ease;
+    position: absolute;
+    bottom: 15px;
+    z-index: 10;
+    margin-left: 15px; }
+  #leadership .container-p {
+    float: left;
+    padding: 5px; }
+  #leadership .portfolio-list {
+    box-shadow: 0px 0px 5px #DBDADA;
+    float: left;
+    height: 37.5vh;
+    position: relative;
+    transition: .5s;
+    overflow: hidden; }
+    #leadership .portfolio-list .background-white {
+      background-color: white;
+      transition: .5s ease;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      z-index: 0;
+      height: 10%; }
+    #leadership .portfolio-list .content-container {
+      padding: 12px !important;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      transition: .5s ease;
+      z-index: 10; }
+    #leadership .portfolio-list ul {
+      position: absolute;
+      transition: .5s;
+      list-style: none;
+      margin-left: 15px;
+      padding-left: 0;
+      z-index: 10;
+      opacity: 0;
+      transition: .5s;
+      transform-origin: bottom;
+      transform: scale(0); }
+      #leadership .portfolio-list ul a {
+        color: #333033;
+        font-family: gotham;
+        text-decoration: none;
+        font-size: 14px; }
+  #leadership .portfolio-list:hover h4 {
+    transform: translateY(-150px); }
+  #leadership .portfolio-list:hover h5 {
+    transform: translateY(-150px); }
+  #leadership .portfolio-list:hover .background-white {
+    transform: scaleY(50);
+    background-color: white;
+    transition: .1s; }
+  #leadership .portfolio-list:hover .content-container {
+    padding-top: 30px !important;
+    transform-origin: bottom;
+    height: 100%; }
+  #leadership .portfolio-list:hover ul {
+    opacity: 1;
+    height: auto;
+    transform: scale(1) translateY(-75px); }
+
+/* CLOSES #LEADERSHIP*/
+/* ----------------------------------------------------------------- */
 /* BEGINS 768PX MEDIA QUERY */
 @media (min-width: 768px) {
   h2 {
