--- a/css/style.scss
+++ b/css/style.scss
@@ -1609,12 +1609,18 @@ padding-bottom: 10px;
 
   ul{
 
+.bio{
+  color: $orange!important;
+  a{
+    color: $orange;
+  }
+}
     position: absolute;
     transition: .5s;
     list-style: none;
     margin-left: 10px;
 padding-left: 0;
-    z-index: 10;
+    z-index: 30;
     opacity: 0;
     transition: .5s;
     transform-origin: bottom;
