--- a/css/style.css
+++ b/css/style.css
@@ -1220,7 +1220,98 @@ footer {
       margin-bottom: 2.5vh; }
     #push-1-pt2-mobile p {
       color: black;
-      float: left; } }
+      float: left; }
+
+  /* ----------------------------------------------------------------- */
+  /* BEGINS TEAM */
+  #leadership {
+    padding-top: 20vh;
+    overflow: scroll !important; }
+    #leadership .name-container {
+      transition: .5s ease;
+      bottom: 0px;
+      z-index: 20;
+      position: absolute;
+      width: 100%;
+      padding-top: 10px;
+      padding-left: 10px;
+      padding-bottom: 10px;
+      background-color: white; }
+      #leadership .name-container h4 {
+        float: left;
+        font-weight: bold;
+        font-size: 15px !important;
+        transition: .5s ease;
+        width: 100%;
+        text-transform: uppercase; }
+      #leadership .name-container h5 {
+        float: left;
+        font-size: 14px;
+        transition: .5s ease; }
+    #leadership .container-p {
+      float: left;
+      padding: 5px; }
+    #leadership .portfolio-list {
+      box-shadow: 0px 0px 5px #DBDADA;
+      float: left;
+      height: 27.5vh;
+      position: relative;
+      transition: .5s;
+      overflow: hidden; }
+      #leadership .portfolio-list .background-white {
+        background-color: white;
+        transition: .5s ease;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        z-index: 0;
+        height: 10%; }
+      #leadership .portfolio-list .content-container {
+        padding: 12px !important;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        transition: .5s ease;
+        z-index: 10; }
+      #leadership .portfolio-list ul {
+        position: absolute;
+        transition: .5s;
+        list-style: none;
+        margin-left: 10px;
+        padding-left: 0;
+        z-index: 30;
+        opacity: 0;
+        transition: .5s;
+        transform-origin: bottom;
+        transform: scale(0); }
+        #leadership .portfolio-list ul .bio {
+          color: #F26524 !important; }
+          #leadership .portfolio-list ul .bio a {
+            color: #F26524; }
+        #leadership .portfolio-list ul a {
+          color: #333033;
+          font-family: gotham;
+          text-decoration: none;
+          font-size: 14px; }
+    #leadership .portfolio-list:hover h4 {
+      transform: translateY(-150px); }
+    #leadership .portfolio-list:hover h5 {
+      transform: translateY(-150px); }
+    #leadership .portfolio-list:hover .background-white {
+      transform: scaleY(50);
+      background-color: white;
+      transition: .1s; }
+    #leadership .portfolio-list:hover .content-container {
+      padding-top: 30px !important;
+      transform-origin: bottom;
+      height: 100%; }
+    #leadership .portfolio-list:hover ul {
+      opacity: 1;
+      height: auto;
+      transform: scale(1) translateY(-75px); }
+
+  /* CLOSES #LEADERSHIP*/
+  /* ----------------------------------------------------------------- */ }
 /* !!CLOSES 768PX @MEDIA QUERY!! */
 /* ----------------------------------------------------------------- */
 @media (min-width: 1024px) {
@@ -1564,7 +1655,15 @@ footer {
   .footer-nav {
     padding-right: 25px; }
     .footer-nav li {
-      float: right; } }
+      float: right; }
+
+  #leadership .portfolio-list {
+    box-shadow: 0px 0px 5px #DBDADA;
+    float: left;
+    height: 35vh;
+    position: relative;
+    transition: .5s;
+    overflow: hidden; } }
 /* CLOSES 1200PX @MEDIA QUERY */
 
 /*# sourceMappingURL=style.css.map */
