--- a/css/style.scss
+++ b/css/style.scss
@@ -1775,6 +1775,145 @@ padding-top: 7vh!important;
     }
 }
 
+
+
+/* ----------------------------------------------------------------- */
+
+/* BEGINS TEAM */
+
+
+    #leadership{
+      padding-top: 20vh;
+      overflow: scroll!important;
+
+.name-container{
+  transition: .5s ease;
+bottom: 0px;
+z-index: 20;
+position: absolute;
+width: 100%;
+padding-top: 10px;
+padding-left: 10px;
+padding-bottom: 10px;
+background-color: white;
+
+            h4{
+              float: left;
+              font-weight: bold;
+              font-size: 15px!important;
+              transition: .5s ease;
+              width: 100%;
+
+
+
+              text-transform: uppercase;
+            }
+            h5{
+              float: left;
+              font-size: 14px;
+              transition: .5s ease;
+
+
+
+            }
+}
+      .container-p{
+        float: left;
+        padding: 5px;
+
+      }
+.portfolio-list{
+  box-shadow: 0px 0px 5px #DBDADA;
+  float: left;
+  height: 27.5vh;
+  position: relative;
+  transition: .5s;
+  overflow: hidden;
+
+.background-white{
+    background-color: white;
+    transition: .5s ease;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    z-index: 0;
+    height: 10%;
+
+}
+
+  .content-container{
+    padding: 12px!important;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    transition: .5s ease;
+    z-index: 10;
+  }
+
+
+
+  ul{
+
+.bio{
+  color: $orange!important;
+  a{
+    color: $orange;
+  }
+}
+    position: absolute;
+    transition: .5s;
+    list-style: none;
+    margin-left: 10px;
+padding-left: 0;
+    z-index: 30;
+    opacity: 0;
+    transition: .5s;
+    transform-origin: bottom;
+    transform: scale(0);
+    a{
+      color: $black;
+      font-family: gotham;
+      text-decoration: none;
+      font-size: 14px;
+    }
+  }
+
+}
+
+.portfolio-list:hover{
+
+h4{
+  transform: translateY(-150px);
+}
+h5{
+  transform: translateY(-150px);
+
+}
+  .background-white{
+    transform: scaleY(50);
+    background-color: white;
+    transition: .1s;
+  }
+  .content-container{
+    padding-top: 30px!important;
+      transform-origin: bottom;
+      height: 100%;
+  }
+  ul{
+    opacity: 1;
+    height: auto;
+      transform: scale(1) translateY(-75px);
+  }
+}
+
+}/* CLOSES #LEADERSHIP*/
+
+/* ----------------------------------------------------------------- */
+
+
+
+
+
 }/* !!CLOSES 768PX @MEDIA QUERY!! */
 
 /* ----------------------------------------------------------------- */
@@ -2317,5 +2456,15 @@ padding-top: 30vh;
   }
 
 
+#leadership{
+  .portfolio-list{
+    box-shadow: 0px 0px 5px #DBDADA;
+    float: left;
+    height: 35vh;
+    position: relative;
+    transition: .5s;
+    overflow: hidden;
+}
+}
 
 } /* CLOSES 1200PX @MEDIA QUERY */
