--- a/css/style.css
+++ b/css/style.css
@@ -1065,7 +1065,7 @@ footer {
 /* ----------------------------------------------------------------- */
 /* BEGINS TEAM */
 #leadership {
-  padding-top: 20vh;
+  padding-top: 10vh;
   overflow: scroll !important; }
   #leadership .name-container {
     transition: .5s ease;
@@ -1075,12 +1075,14 @@ footer {
     width: 100%;
     padding-top: 10px;
     padding-left: 10px;
-    padding-bottom: 10px; }
+    padding-bottom: 10px;
+    background-color: white; }
     #leadership .name-container h4 {
       float: left;
       font-weight: bold;
       font-size: 15px !important;
       transition: .5s ease;
+      width: 100%;
       text-transform: uppercase; }
     #leadership .name-container h5 {
       float: left;
@@ -1092,7 +1094,7 @@ footer {
   #leadership .portfolio-list {
     box-shadow: 0px 0px 5px #DBDADA;
     float: left;
-    height: 37.5vh;
+    height: 42.5vh;
     position: relative;
     transition: .5s;
     overflow: hidden; }
@@ -1132,9 +1134,9 @@ footer {
         text-decoration: none;
         font-size: 14px; }
   #leadership .portfolio-list:hover h4 {
-    transform: translateY(-150px); }
+    transform: translateY(-200px); }
   #leadership .portfolio-list:hover h5 {
-    transform: translateY(-150px); }
+    transform: translateY(-200px); }
   #leadership .portfolio-list:hover .background-white {
     transform: scaleY(50);
     background-color: white;
@@ -1146,7 +1148,7 @@ footer {
   #leadership .portfolio-list:hover ul {
     opacity: 1;
     height: auto;
-    transform: scale(1) translateY(-75px); }
+    transform: scale(1) translateY(-100px); }
 
 /* CLOSES #LEADERSHIP*/
 /* ----------------------------------------------------------------- */
