--- a/css/style.scss
+++ b/css/style.scss
@@ -1541,8 +1541,10 @@ margin-top: -5vh;
 
 
     #leadership{
-      padding-top: 20vh;
+      padding-top: 10vh;
       overflow: scroll!important;
+
+
 
 .name-container{
   transition: .5s ease;
@@ -1553,14 +1555,14 @@ width: 100%;
 padding-top: 10px;
 padding-left: 10px;
 padding-bottom: 10px;
+background-color: white;
 
             h4{
               float: left;
               font-weight: bold;
               font-size: 15px!important;
               transition: .5s ease;
-
-
+              width: 100%;
               text-transform: uppercase;
             }
             h5{
@@ -1580,7 +1582,7 @@ padding-bottom: 10px;
 .portfolio-list{
   box-shadow: 0px 0px 5px #DBDADA;
   float: left;
-  height: 37.5vh;
+  height: 42.5vh;
   position: relative;
   transition: .5s;
   overflow: hidden;
@@ -1638,10 +1640,10 @@ padding-left: 0;
 .portfolio-list:hover{
 
 h4{
-  transform: translateY(-150px);
+  transform: translateY(-200px);
 }
 h5{
-  transform: translateY(-150px);
+  transform: translateY(-200px);
 
 }
   .background-white{
@@ -1657,7 +1659,7 @@ h5{
   ul{
     opacity: 1;
     height: auto;
-      transform: scale(1) translateY(-75px);
+      transform: scale(1) translateY(-100px);
   }
 }
 
