--- a/css/style.css
+++ b/css/style.css
@@ -1313,7 +1313,17 @@ footer {
       transform: scale(1) translateY(-75px); }
 
   /* CLOSES #LEADERSHIP*/
-  /* ----------------------------------------------------------------- */ }
+  /* ----------------------------------------------------------------- */
+  #portfolio #press .container-p {
+    height: 30vh;
+    min-height: 350px; }
+  #portfolio #press .portfolio-list {
+    height: 30vh;
+    min-height: 350px; }
+    #portfolio #press .portfolio-list .portfolio-image-container {
+      min-height: 50%; }
+  #portfolio #press h3 {
+    font-size: 16px; } }
 /* !!CLOSES 768PX @MEDIA QUERY!! */
 /* ----------------------------------------------------------------- */
 @media (min-width: 1024px) {
@@ -1327,6 +1337,61 @@ footer {
       font-size: 16px; }
 
   /* CLOSES HEADER */
+  /* TYPE */
+  h1 {
+    font-size: 60px;
+    line-height: 50px; }
+
+  /* END TYPE */
+  #push-mobile img {
+    width: 100vw; }
+
+  #container-1 .video-background {
+    left: 0vw;
+    width: 100vw;
+    height: auto; }
+
+  #property-landing #container-1 video {
+    left: -10vw;
+    margin: 0;
+    width: 120vw; }
+  #property-landing h2 {
+    margin-top: 5vh;
+    text-align: left;
+    font-size: 40px;
+    line-height: 40px; }
+  #property-landing p {
+    font-size: 13px;
+    line-height: 23px; }
+  #property-landing .carousel {
+    float: right;
+    height: 100vh; }
+    #property-landing .carousel img {
+      height: 100vh !important;
+      width: auto; }
+    #property-landing .carousel .carousel-item {
+      height: 100vh; }
+  #property-landing .carousel-inner {
+    height: 100vh !important; } }
+/* !!CLOSES 1024PX @MEDIA QUERY!! */
+/* ----------------------------------------------------------------- */
+/* !!OPENS 1200PX @MEDIA QUERY!! */
+/* ----------------------------------------------------------------- */
+@media (min-width: 1200px) {
+  header {
+    padding-left: 35px; }
+    header .logo-container {
+      max-width: 150px; }
+    header h5 {
+      font-size: 18px;
+      padding-top: 0; }
+
+  .secondary-nav {
+    padding-right: 25px; }
+    .secondary-nav li {
+      float: right;
+      margin-right: 15px; }
+
   #nav {
     display: block;
     z-index: 300;
@@ -1384,7 +1449,7 @@ footer {
       letter-spacing: 2px;
       transition: 0s;
       margin-bottom: 0vh;
-      float: left;
+      float: right;
       font-size: 12px;
       border: 1px solid lightgray; }
     .secondary-nav a {
@@ -1496,61 +1561,6 @@ footer {
       background-color: #f1f1f1; }
 
   /* END NAV */
-  /* TYPE */
-  h1 {
-    font-size: 60px;
-    line-height: 50px; }
-
-  /* END TYPE */
-  #push-mobile img {
-    width: 100vw; }
-
-  #container-1 .video-background {
-    left: 0vw;
-    width: 100vw;
-    height: auto; }
-
-  #property-landing #container-1 video {
-    left: -10vw;
-    margin: 0;
-    width: 120vw; }
-  #property-landing h2 {
-    margin-top: 5vh;
-    text-align: left;
-    font-size: 40px;
-    line-height: 40px; }
-  #property-landing p {
-    font-size: 13px;
-    line-height: 23px; }
-  #property-landing .carousel {
-    float: right;
-    height: 100vh; }
-    #property-landing .carousel img {
-      height: 100vh !important;
-      width: auto; }
-    #property-landing .carousel .carousel-item {
-      height: 100vh; }
-  #property-landing .carousel-inner {
-    height: 100vh !important; } }
-/* !!CLOSES 1024PX @MEDIA QUERY!! */
-/* ----------------------------------------------------------------- */
-/* !!OPENS 1200PX @MEDIA QUERY!! */
-/* ----------------------------------------------------------------- */
-@media (min-width: 1200px) {
-  header {
-    padding-left: 35px; }
-    header .logo-container {
-      max-width: 150px; }
-    header h5 {
-      font-size: 18px;
-      padding-top: 0; }
-
-  .secondary-nav {
-    padding-right: 25px; }
-    .secondary-nav li {
-      float: right;
-      margin-right: 15px; }
-
   #container-2 {
     padding-top: 30vh; }
     #container-2 h2 {
