--- a/css/style.scss
+++ b/css/style.scss
@@ -1911,9 +1911,26 @@ h5{
 }/* CLOSES #LEADERSHIP*/
 
 /* ----------------------------------------------------------------- */
+#portfolio{
+#press{
+  .container-p{
+    height: 30vh;
+    min-height: 350px;
+  }
+  .portfolio-list{
+    height: 30vh;
+    min-height: 350px;
+    .portfolio-image-container{
 
+      min-height: 50%;
+    }
+  }
 
-
+  h3{
+    font-size: 16px;
+  }
+}
+}
 
 
 }/* !!CLOSES 768PX @MEDIA QUERY!! */
@@ -1937,6 +1954,109 @@ font-size: 16px;
 }
 
 } /* CLOSES HEADER */
+
+
+
+/* TYPE */
+
+h1{
+  font-size: 60px;
+  line-height: 50px;
+}
+
+/* END TYPE */
+
+#push-mobile{
+  img{
+    width: 100vw;
+  }
+}
+
+
+
+#container-1{
+  .video-background{
+
+    left: 0vw;
+    width: 100vw;
+    height: auto;
+  }
+}
+
+
+
+#property-landing{
+#container-1{
+  video{
+    left: -10vw;
+    margin: 0;
+    width: 120vw;
+  }
+}
+    h2{
+      margin-top: 5vh;
+      text-align: left;
+      font-size: 40px;
+      line-height: 40px;
+    }
+
+p{
+  font-size: 13px;
+  line-height: 23px;
+}
+
+  .carousel{
+    float: right;
+    height: 100vh;
+
+    img{
+      height: 100vh!important;
+      width: auto;
+    }
+    .carousel-item{
+      height: 100vh;
+    }
+  }
+  .carousel-inner{
+    height: 100vh!important;
+  }
+}
+
+
+
+
+
+
+
+}/* !!CLOSES 1024PX @MEDIA QUERY!! */
+
+/* ----------------------------------------------------------------- */
+
+/* !!OPENS 1200PX @MEDIA QUERY!! */
+
+/* ----------------------------------------------------------------- */
+
+@media (min-width: 1200px){
+
+header{
+      padding-left: 35px;
+  .logo-container{
+    max-width: 150px;
+  }
+  h5{
+    font-size: 18px;
+    padding-top: 0;
+  }
+}
+.secondary-nav{
+  padding-right: 25px;
+  li{
+    float: right;
+      margin-right: 15px;
+  }
+}
+
+
 
 #nav{
   display: block;
@@ -2002,7 +2122,7 @@ padding-right: 1vw;
       letter-spacing: 2px;
       transition: 0s;
       margin-bottom: 0vh;
-      float: left;
+      float: right;
       font-size: 12px;
       border: 1px solid lightgray;
 
@@ -2183,100 +2303,6 @@ box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, .2);
 
 /* END NAV */
 
-
-/* TYPE */
-
-h1{
-  font-size: 60px;
-  line-height: 50px;
-}
-
-/* END TYPE */
-
-#push-mobile{
-  img{
-    width: 100vw;
-  }
-}
-
-
-
-#container-1{
-  .video-background{
-
-    left: 0vw;
-    width: 100vw;
-    height: auto;
-  }
-}
-
-
-
-#property-landing{
-#container-1{
-  video{
-    left: -10vw;
-    margin: 0;
-    width: 120vw;
-  }
-}
-    h2{
-      margin-top: 5vh;
-      text-align: left;
-      font-size: 40px;
-      line-height: 40px;
-    }
-
-p{
-  font-size: 13px;
-  line-height: 23px;
-}
-
-  .carousel{
-    float: right;
-    height: 100vh;
-
-    img{
-      height: 100vh!important;
-      width: auto;
-    }
-    .carousel-item{
-      height: 100vh;
-    }
-  }
-  .carousel-inner{
-    height: 100vh!important;
-  }
-}
-
-
-}/* !!CLOSES 1024PX @MEDIA QUERY!! */
-
-/* ----------------------------------------------------------------- */
-
-/* !!OPENS 1200PX @MEDIA QUERY!! */
-
-/* ----------------------------------------------------------------- */
-
-@media (min-width: 1200px){
-
-header{
-      padding-left: 35px;
-  .logo-container{
-    max-width: 150px;
-  }
-  h5{
-    font-size: 18px;
-    padding-top: 0;
-  }
-}
-.secondary-nav{
-  padding-right: 25px;
-  li{
-    float: right;
-      margin-right: 15px;
-  }
-}
 
 
 
