--- a/css/style.css
+++ b/css/style.css
@@ -1656,7 +1656,7 @@ footer {
     margin-top: 10px; }
   #portfolio .portfolio-container .portfolio-list {
     height: 45vh; }
-  #portfolio .portfolio-container .image-container {
+  #portfolio .portfolio-container .portfolio-image-container {
     height: 75%;
     min-height: 75%; }
 
