--- a/css/style.scss
+++ b/css/style.scss
@@ -1717,7 +1717,7 @@ article{
   padding-bottom: 15vh;
   p{
     float: left;
-    text-align: justify;
+    text-align: left;
   }
 }
 #article{
@@ -1741,6 +1741,7 @@ p{
 h1{
     font-size: 24px;
     line-height: 24px;
+    margin-top: 2vh;
     margin-bottom: 0;
   }
 
@@ -2049,6 +2050,9 @@ h5{
 
 
 #article{
+  p{
+    text-align: justify;
+  }
 .article-image-container{
   height: 60vh;
   overflow: hidden;
@@ -2162,7 +2166,7 @@ p{
 
   }
 .article-image-container{
-  height: 75vh;
+  height: 70vh;
   overflow: hidden;
   margin-bottom: 2.5vh;
 }
