--- a/css/style.css
+++ b/css/style.css
@@ -1190,12 +1190,25 @@ article {
   padding-top: 7vh; }
   #article .article-image-container {
     height: 35vh;
-    overflow: hidden; }
-    #article .article-image-container p {
-      float: left; }
+    overflow: hidden;
+    position: relative; }
     #article .article-image-container img {
       width: 100%;
-      height: auto; }
+      height: auto;
+      position: absolute; }
+  #article ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background-color: #f1f1f1; }
+    #article ul li {
+      float: left;
+      padding: 0;
+      margin-right: 10px; }
+  #article a {
+    color: #F26524;
+    text-decoration: none;
+    float: left; }
   #article h1 {
     font-size: 24px;
     line-height: 24px;
@@ -1456,14 +1469,16 @@ article {
     font-family: gotham;
     font-weight: 900;
     color: black;
-    font-size: 40px;
-    line-height: 35px;
+    font-size: 30px;
+    line-height: 30px;
     padding-bottom: 5px;
     text-transform: uppercase; }
   #article .article-image-container {
-    height: 70vh;
+    height: 65vh;
     overflow: hidden;
     margin-bottom: 2.5vh; }
+    #article .article-image-container img {
+      bottom: -20vh; }
   #article .quote-container {
     background-color: #f1f1f1;
     padding-left: 50px;
