--- a/css/style.scss
+++ b/css/style.scss
@@ -1629,7 +1629,12 @@ background-color: white;
 
 
   ul{
-
+    li{
+      color: $black;
+      font-size: 11px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
 .bio{
   color: $orange!important;
   a{
@@ -1650,7 +1655,7 @@ padding-left: 0;
       color: $black;
       font-family: gotham;
       text-decoration: none;
-      font-size: 14px;
+      font-size: 11px!important;
     }
   }
 
