--- a/css/style.scss
+++ b/css/style.scss
@@ -268,6 +268,13 @@ font-size: 16px;
   }
 }
 
+
+.bottom{
+  width: 100vw;
+  position: absolute;
+  bottom: 0;
+}
+
 #featured-projects{
   .portfolio-list{
     transition: .25s;
