--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,9 @@ p {
   position: absolute;
   bottom: 0; }
 
+.full-width {
+  width: 100vw; }
+
 #featured-projects .portfolio-list {
   transition: .25s;
   height: 21vh !important; }
