--- a/css/style.scss
+++ b/css/style.scss
@@ -275,6 +275,10 @@ font-size: 16px;
   bottom: 0;
 }
 
+.full-width{
+  width: 100vw;
+}
+
 #featured-projects{
   .portfolio-list{
     transition: .25s;
