--- a/css/style.scss
+++ b/css/style.scss
@@ -2228,6 +2228,15 @@ p{
 
 
 
+#brokerage{
+#leadership{
+  padding-top: 9vh;
+  padding-bottom: 10vh;
+}
+}
+
+
+
 }/* !!CLOSES 1024PX @MEDIA QUERY!! */
 
 /* ----------------------------------------------------------------- */
