--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,11 @@ section {
   height: 100vh;
   scroll-snap-align: center; }
 
+#page-404 {
+  padding-top: 25vh !important; }
+  #page-404 a {
+    color: #F26524; }
+
 /* ENDS SNAP SCROLL */
 nav {
   height: 100vh;
@@ -1209,6 +1214,14 @@ article {
   article p {
     float: left;
     text-align: left; }
+  article h6 {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: gotham;
+    margin-top: 20px !important;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    float: left; }
 
 #article {
   padding-top: 7vh; }
@@ -1502,7 +1515,7 @@ article {
     height: 100vh !important; }
 
   #article p {
-    margin-top: 25px; }
+    margin-top: 15px; }
   #article h1 {
     font-family: gotham;
     font-weight: 900;
